# gst-log-viewer

./: .dockerignore  .gitignore  Cargo.toml  CloudronManifest.json  Dockerfile  README.md  build-cloudron.sh  cloudron-wrapper.c  nginx.conf  run-app.sh  start.sh  supervisord.conf
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: FileUpload.jsx  FilterPanel.jsx  LogViewer.jsx  Navbar.jsx  TimelineChart.jsx
frontend/src/components/ui/: select.jsx  toaster.jsx  use-toast.js
src/: main.rs
src/handlers/: mod.rs  options.rs  query.rs  timeline.rs  upload.rs
src/models/: mod.rs
src/parser/: mod.rs
