[package]
name = "gst-log-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Local parser integrated
axum = { version = "0.7.2", features = ["multipart"] }
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
tempfile = "3.8.1"
uuid = { version = "1.6.1", features = ["v4"] }
regex = "1.10.2"
gstreamer = "0.21.1"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
# Additional dependencies needed for the parser
itertools = "0.10"
lazy_static = "1.4"
thiserror = "1.0"
